[package]
name = "qmwc"
description = "QuietMisdreavus Wallpaper Cycler"
repository = "https://github.com/QuietMisdreavus/qmwc"
readme = "README.md"
license = "GPL-3.0-or-later"
version = "0.0.0"
authors = ["QuietMisdreavus <victoria@quietmisdreavus.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
dirs = "2"
tracing = "0.1"
tracing-subscriber = "0.2"
